# TrueTabsIntegration

./: README.md
data_extractor/: .gitignore  Cargo.toml
data_extractor/src/: file_loader.rs  main.rs
data_extractor/src/db/: mod.rs  nosql.rs  sql.rs  truetabs.rs
telegram_bot/: .env  .gitignore  bot.py  config.py  requirements  requirements.txt
telegram_bot/database/: __init__.py  sqlite_db.py
telegram_bot/handlers/: __init__.py  config_handlers.py  history_handlers.py  params_handlers.py  scheduled_handlers.py  shared_constants.py  source_handlers.py  start_handlers.py  upload_handlers.py  weather_handlers.py
telegram_bot/keyboards/: __init__.py  inline.py
telegram_bot/utils/: __init__.py  encryption.py  rust_executor.py
