[package]
name = "data_extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bigdecimal = "0.4"
calamine = "0.20"
cdrs = { version = "4.0.0-beta.1" }
clap = { version = "4.0", features = ["derive"] }
clickhouse-rs = { version = "1.1.0-alpha.1" }
couchbase = { version = "1.0.0-alpha.4" }
chrono = "0.4"
csv = "1.1"
dotenv = "0.15"
elasticsearch = { version = "8.17.0-alpha.1" }
influxdb-client = "0.1.4"
mongodb = "2.6"
neo4rs = "0.7"
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
rust_xlsxwriter = "0.60"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres", "mysql", "sqlite", "uuid", "json", "chrono", "bigdecimal"] }
tiberius = { version = "0.6", features = ["tokio", "rustls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4", features = ["serde", "v4"] }